로고와 버튼 추가

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -15,9 +15,13 @@
 
 
 <body>
-
-
-    <div class="a">
+    <div class="a" style="float:left">
+        <img src="C:\Users\baeji\Desktop\logo.png" class="logo" height="50px" alt="...">
+    </div>
+    <div class="a-" style="float:right">
+        <button>로그아웃</button>
+    </div>
+    <div class="a-1">
         <h1>OOOO OOO님에게 추천하는 영화</h1>
     </div>
     <div class="b">
