--- a/templates/movie.html
+++ b/templates/movie.html
@@ -15,17 +15,17 @@
 
 
 <body>
-    <div class="a" style="float:left">
-        <img src="C:\Users\baeji\Desktop\logo.png" class="logo" height="50px" alt="...">
+    <div class="top-logo" style="float:left">
+        <img src="static/image/logo_1.png" class="logo" height="50px" alt="...">
     </div>
-    <div class="a-" style="float:right">
+    <div class="top-button" style="float:right">
         <button>로그아웃</button>
     </div>
-    <div class="a-1">
+    <div class="top-title">
         <h1>OOOO OOO님에게 추천하는 영화</h1>
     </div>
-    <div class="b">
-        <div class="b1" >
+    <div class="wrap">
+        <div class="card" >
             <div class="poster">
                 <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
                      class="card-img-top" width="100%" height="100%" alt="...">
@@ -35,7 +35,7 @@
                 <p class="text">내용</p>
             </div>
         </div>
-        <div class="b1-">
+        <div class="card-">
             <div class="poster">
             <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
                      class="card-img-top" width="100%" height="100%" alt="...">
@@ -45,7 +45,7 @@
                 <p class="text">내용</p>
             </div>
         </div>
-        <div class="b1">
+        <div class="card">
             <div class="poster">
                 <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
                      class="card-img-top" width="100%" height="100%" alt="...">
@@ -75,8 +75,6 @@
         <button>ESTP</button>
         <button>ESFP</button>
     </div>
-
-
 
 
 </body>
