--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <img class="mainLogo" src="static/image/logo_1.png"/>
       </a>
     </h1>
-    <button onclick="to_login()">mbti 별 영화 추천 받기!</button>
+    <button onclick="to_choice()">mbti 별 영화 추천 받기!</button>
   </div>
 </body>
 </html>
