메인페이지 완성 (자동슬라이드 기능 구현)

--- a/templates/choice.html
+++ b/templates/choice.html
@@ -16,7 +16,7 @@
   <img class="mainBgImg" src="static/image/1.jpg"/>
   <div class="mainWrap">
     <a href="/">
-      <img class="mainLogo" src="static/image/logo_1.png"/>
+      <img class="mainLogo" src="static/image/logoA.png"/>
       </a>
      <div class="mbti-button">
         <button onclick="to_movie()">INTJ</button>
