--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: -1.5%;
 }
 
 .mainWrap > button {
@@ -27,23 +28,36 @@
     width: 200px;
     height: 40px;
     border: 1px #000000 solid;
-    margin: 250px auto 0 auto;
+
     background-color: #8d0f14;
     text-align: center;
     cursor: pointer;
 
     color: white;
     transition: all 0.9s;
+    margin-bottom: 15%;
 }
 
 .mainWrap > button:hover {
     color: #fff;
-    box-shadow: 200px 0 0 0 rgba(0, 0, 0, 0.5) inset
+    box-shadow: 200px 0 0 0 rgba(0, 0, 0, 0.5) inset;
 }
 
-.mainLogo {
-    width: 400px;
-    height: 100px;
+.mainLogo{
+    width: 300px;
+    height:100%
+}
+
+.mainWrap > a{
+    margin-bottom: 10%;
+}
+
+.slide1{
+    width: 750px;
+    height: 400px;
+}
+.slide-image{
+    margin-bottom: 20%;
 }
 
 /*손현수*/
@@ -192,7 +206,5 @@ button:hover {
     cursor: pointer;
     /*box-shadow: 0 2px 4px rgba(0, 79, 255, 0.6);*/
 }
-.mainLogo{
-    width: 300px;
-    height:100%
-}
+
+
