--- a/templates/login.html
+++ b/templates/login.html
@@ -15,24 +15,22 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Noto+Sans+KR:wght@300;400;500;700&family=Poppins&display=swap"
-          rel="stylesheet">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Noto+Sans+KR:wght@300;400;500;700&family=Poppins&display=swap"
+        rel="stylesheet">
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-
-<!--app.js에 연결-->
-  <script defer src="../static/app.js"></script>
-<!--  style.css에 연결-->
-  <link rel="stylesheet" href="../static/style.css" />
+    <!--app.js에 연결-->
+    <script defer src="../static/app.js"></script>
+    <!--  style.css에 연결-->
+    <link rel="stylesheet" href="../static/style.css"/>
 </head>
 <body>
 <img class="mainBgImg" src="static/image/1.jpg"/>
-
-<section class="section">
+<section class="section loginWrap">
     <section>
-    <div class=" has-text-centered" style="padding-bottom:1rem;margin:auto;">
+    <div>
         <img class="mainLogo" src="static/image/logoA.png"/>
     </div>
 </section>
@@ -104,12 +102,9 @@
                             </button>
                         </nav>
                     </div>
-
-
                 </div>
             </article>
         </div>
-
     </div>
 </section>
 </body>
