--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,26 @@
     filter: brightness(50%);
 }
 
+.index-mainLogo {
+    width: 400px;
+    height: 100%;
+}
+.other {
+    color: #E5E5E5;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 24px;
+    margin-top: 00px;
+    margin-left: 70px;
+}
+.other:after {
+    content: "";
+    display: block;
+    width: 400px;
+    border-bottom: 1px solid #bcbcbc;
+    margin: 20px 0;
+}
+
 .mainWrap {
     position: absolute;
     left: 50%;
@@ -20,55 +40,45 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: -1.5%;
 }
 
 .mainWrap > button {
-    border-radius: 7px;
+    border-radius: 20px;
     width: 200px;
     height: 40px;
     border: 1px #000000 solid;
-
-    background-color: #8d0f14;
+    margin: 250px auto 0 auto;
+    background-color: #e50914;
     text-align: center;
     cursor: pointer;
 
     color: white;
     transition: all 0.9s;
-    margin-bottom: 15%;
 }
 
 .mainWrap > button:hover {
     color: #fff;
-    box-shadow: 200px 0 0 0 rgba(0, 0, 0, 0.5) inset;
+    box-shadow: 200px 0 0 0 rgba(0, 0, 0, 0.5) inset
 }
 
-.mainLogo{
-    width: 300px;
-    height:100%
+.mainLogo {
+    position: absolute;
+    width: 250px;
+    height: auto;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
 }
 
-.mainWrap > a{
-    margin-bottom: 10%;
+.choice {
+    width: 400px;
 }
 
-.slide1{
-    width: 750px;
-    height: 400px;
-}
-.slide-image{
-    margin-bottom: 20%;
-}
-
-/*손현수*/
-
-
-
-/*login 페이지 css*/
 .button.is-sparta {
-    background-color: #e8344e;
+    background-color: #e50914;
     border-color: transparent;
     color: #fff !important;
+    border-radius: 20px;
 }
 
 .button.is-sparta.is-outlined {
@@ -81,10 +91,12 @@
     color: gray;
 }
 .section.section{
-    margin-top: 10%;
+    margin-top: 200px;
 }
 
-/*movie 페이지 css*/
+.movie-body {
+    background: #141414;
+}
 .top-title {
     color: #ffffff;
 
@@ -95,69 +107,52 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10%;
 }
 
 .wrap {
     max-width: 1130px;
-
     display: flex;
     justify-content: center;
-    /*background: #ffffff;*/
-
     margin: 0 auto;
 }
-.card {
-    flex: 1;
-    box-sizing: border-box;
-    margin-top: 20px;
-}
+
 .card- {
     margin-top: 20px;
 }
 
-.other {
+.card-img-top {
+    object-fit:cover;
+}
+
+.movie-title {
     color: #E5E5E5;
-
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 24px;
-
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
     margin-top: 0;
-    margin-left: 70px;
+    margin-bottom: 0;
 }
-.other:after {
-    content: "";
-    display: block;
-    width: 400px;
-    border-bottom: 1px solid #bcbcbc;
-    margin: 20px 0;
+.text {
+    color: #E5E5E5;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 10px;
 }
-.mbti-button1 {
+.mbti-button {
     max-width: 1800px;
     margin: 0 auto;
-    margin-top: 10%;
-}
-.mbti-button2 {
-    max-width: 1800px;
-    margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 20px;
 }
 button {
     width: 100px;
     height: 40px;
     color: #FFFFFF;
     background: #141414;
-
     font-size: 16px;
     border: none;
     border-radius: 20px;
-    /*box-shadow: 0 4px 16px rgba(0, 79, 255, 0.3);*/
     transition: 0.3s;
-    /*position: absolute;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
-    /*transform: translate(-50%, -50%);*/
     margin-top: 0;
 }
 button:focus {
@@ -166,89 +161,121 @@ button:focus {
 button:hover {
     background: #e50914;
     cursor: pointer;
-    /*box-shadow: 0 2px 4px rgba(0, 79, 255, 0.6);*/
+}
+.top-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    display: flex;
+}
+.goProfile {
+        display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  text-decoration: none;
+  color: white;
 }
 
+.profile-img {
+    width: 32px;
+    height: 32px;
+    border-radius: 16px;
+    margin-right: 5px;
+}
 
-/*choice movie 병합- 정성일*/
-.top-button{
-    position: relative;
+.user-body {
+    background:url('/static/image/1.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+}
+
+.profile-box {
+    position: absolute;
+    color: white;
+    z-index: +1;
     left: 50%;
-    bottom:50%px;
+    top: 50%;
+    width: 500px;
+    height: 500px;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border-radius: 10px;
 }
 
+.profile-inbox {
+    margin: 20px;
+        display: flex;
+    flex-direction: column;
+        align-items: center;
+}
+.profile-in-img {
+    margin-bottom: 15px;
+}
+
+.profile-button-box {
+    margin: 15px 0 0 0;
+}
+.user-info{
+    margin-top: 5px;
+    padding: 15px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  color: black;
+    width: 400px;
+    height: 150px;
+}
+.heart {
+    margin-top: 8px;
+    filter: drop-shadow(0px 0px 3px #5b1616);
+    position: relative;
+    color: #e40914;
+
+}
+.profile-big-box {
+  background-color: #5b1616;
+  border-radius: 10px;
+  color: white;
+  padding: 1em;
+        position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 500px;
+    height: 500px;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.8;
+}
+
+.movie-contents {
+    color: white;
+    padding: 5px 20px 20px 20px;
+    width: 580px;
+    height: 300px;
+    margin-bottom: 40px;
+}
 .poster {
-    width: 20%;
-    height: 20%;
-
+    z-index: +1;
+    position: relative;
+    width: 280px;
+    height: 400px;
+    margin: 0 auto;
 }
-.contents {
-
-}
-
-.title {
-    color: #E5E5E5;
-
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 36px;
-
-}
-.text {
-    color: #E5E5E5;
-
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-}
-#INTJ-movie{
-    display: none;
-}
-#INTP-movie{
-    display: none;
-}
-#ENTJ-movie{
-    display: none;
-}
-#ENTP-movie{
-    display: none;
-}
-#INFJ-movie{
-    display: none;
-}
-#INFP-movie{
-    display: none;
-}
-#ENFJ-movie{
-    display: none;
-}
-#ENFP-movie{
-    display: none;
-}
-#ISTJ-movie{
-    display: none;
-}
-#ISFJ-movie{
-    display: none;
-}
-#ESFJ-movie{
-    display: none;
-}
-#ESTJ-movie{
-    display: none;
-}
-#ISTP-movie{
-    display: none;
-}
-#ISFP-movie{
-    display: none;
-}
-#INTJ-movie{
-    display: none;
-}
-#ESTP-movie{
-    display: none;
-}
-#ESFP-movie{
-    display: none;
+.card {
+    flex: 1;
+    box-sizing: border-box;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
