--- a/templates/movie.html
+++ b/templates/movie.html
@@ -7,75 +7,52 @@
     <script defer src="../static/app.js"></script>
     <!--  style.css에 연결-->
     <link rel="stylesheet" href="../static/style.css"/>
+        <!-- JS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
-
-
-
+<script>
+          $(document).ready(function () {
+          get_posts()
+          })
+</script>
 <body class="movie-body">
-    <div class="top-logo" style="float:left">
-        <img src="static/image/logo_1.png" class="logo" height="50px" alt="...">
+<div class="top-logo" style="float:left">
+      <a href="/">
+        <img src="static/image/logo_1.png" class="logo" height="50px" alt="..."></a>
     </div>
-    <div class="top-button" style="float:right">
+    <div class="top-button">
+        <a class="goProfile" href="/user/{{ user_info.username }}">
+            <img class="profile-img" src="{{ url_for('static', filename=user_info.profile_pic_real) }}">
+        <span><strong >{{ user_info.username }}</strong> 님</span>
+        </a>
         <button onclick="logout()">로그아웃</button>
     </div>
     <div class="top-title">
-        <h1>OOOO OOO님에게 추천하는 영화</h1>
+        <h1>'<strong>{{ user_info.profile_name }}</strong>'님에게 추천하는 영화</h1>
     </div>
-    <div class="wrap">
-        <div class="card" >
-            <div class="poster">
-                <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
-                     class="card-img-top" width="100%" height="100%" alt="...">
-            </div>
-            <div class="contents">
-                <h5 class="title">타이틀</h5>
-                <p class="text">내용</p>
-            </div>
-        </div>
-        <div class="card-">
-            <div class="poster">
-            <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
-                     class="card-img-top" width="100%" height="100%" alt="...">
-            </div>
-            <div class="contents">
-                <h5 class="title">타이틀</h5>
-                <p class="text">내용</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="poster">
-                <img src="https://w.namu.la/s/c21312e1ac91283b9e2044f3b2203c2b0574bb1b30a7eae88edd0fa71535198bb8c642d3761ed2b3f86a89c9a55ad5f04b8022cbbdc2780654fd49ec861af6a67fcc1c91a60ea6c67d6b1984a4dcd92b16e97f78d5018f58fda0fa1ba1bb86650d515d6205e061bfcd9c55cfe65a4877"
-                     class="card-img-top" width="100%" height="100%" alt="...">
-            </div>
-            <div class="contents">
-                <h5 class="title">타이틀</h5>
-                <p class="text">내용</p>
-            </div>
-        </div>
+    <div id = "post-outbox" class="wrap">
     </div>
     <h5 class="other">다른 MBTI</h5>
     <div class="mbti-button">
-        <button>INTJ</button>
-        <button>INTP</button>
-        <button>ENTJ</button>
-        <button>ENTP</button>
-        <button>INFJ</button>
-        <button>INFP</button>
-        <button>ENFJ</button>
-        <button>ENFP</button>
-        <button>ISTJ</button>
-        <button>ISFJ</button>
-        <button>ESTJ</button>
-        <button>ESFJ</button>
-        <button>ISTP</button>
-        <button>ISFP</button>
-        <button>ESTP</button>
-        <button>ESFP</button>
+        <button value = "INTJ" onclick="to_movie('INTJ')">INTJ</button>
+        <button onclick="to_movie('INTP')">INTP</button>
+        <button onclick="to_movie('ENTJ')">ENTJ</button>
+        <button onclick="to_movie('ENTP')">ENTP</button>
+        <button onclick="to_movie('INFJ')">INFJ</button>
+        <button onclick="to_movie('INFP')">INFP</button>
+        <button onclick="to_movie('ENFJ')">ENFJ</button>
+        <button onclick="to_movie('ENFP')">ENFP</button>
+        <button onclick="to_movie('ISTJ')">ISTJ</button>
+        <button onclick="to_movie('ISFJ')">ISFJ</button>
+        <button onclick="to_movie('ESTJ')">ESTJ</button>
+        <button onclick="to_movie('ESFJ')">ESFJ</button>
+        <button onclick="to_movie('ISTP')">ISTP</button>
+        <button onclick="to_movie('ISFP')">ISFP</button>
+        <button onclick="to_movie('ESTP')">ESTP</button>
+        <button onclick="to_movie('ESFP')">ESFP</button>
     </div>
-
-
 </body>
 </html>
